# sources/app/Http/Controllers/Api/V1/Account/AccountListController.php
@@ -18,6 +18,18 @@ class AccountListController extends Controller
 
     }
 
+    /**
+     * @OA\Get(
+     *     tags={"Account"},
+     *     path="/api/v1/accounts/list",
+     *     summary="Список аккаунтов",
+     *     description="Возвращение JSON объекта",
+     *     @OA\Response(
+     *         response=200,
+     *         description="УСПЕХ!",
+     *     )
+     * )
+     */
     public function __invoke(Request $request): JsonResponse
     {
         $accounts = $this->account::where(['role' => 'РОП']);
